[package]
name = "tokenswitch"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
rust-embed = "8"
mime_guess = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
resend-rs = "0.15"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
sha2 = "0.10"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
